# Lokal-GbtAgent

./: README.md  main.py  pyproject.toml
data/: lokal_agent.db
data/reports/: run_1_report.md
src/lokal_agent/api/: main.py
src/lokal_agent/core/: config.py
src/lokal_agent/core/agent/: protocol.py  real_agent.py  runner.py
src/lokal_agent/core/indexing/: indexer.py
src/lokal_agent/core/llm/: openai_client.py
src/lokal_agent/core/storage/: db.py  models.py
src/lokal_agent/core/tasks/: compile_plan.py
src/lokal_agent/ui/: app.py
src/lokal_gbtagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
