[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokal-gbtagent"
version = "0.1.0"
description = "Local agent with NiceGUI UI + FastAPI API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nicegui>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "sqlmodel>=0.0.16",
  "pydantic>=2.6.0",
  "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]